--- a/src/app/contador/contador.component.html
+++ b/src/app/contador/contador.component.html
@@ -1,6 +1,13 @@
-<h1>{{title}}</h1>
+<!--<h1>{{title}}</h1>
 <h2>Base :{{base}}</h2>
 <button (click)="aggregate()">+{{base}}</button>
 <button (click)="restar()">-{{base}}</button>
-<p>{{counter}}</p>
+<p>{{counter}}</p>-->
+
+
+<div class="container">
+    <h2>Control de contador</h2>
+    <button (click)="aggregate2()">+</button>
+    <button (click)="restar2()">-</button>
+</div>
 
